国旗を追加

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./css/index.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.9.0/css/flag-icon.css">
   <title>コロナウイルス状況</title>
 </head>
 
@@ -21,6 +22,7 @@
         <table id="corona" class="table table-hover dataTable" style="width:100%">
           <thead class="table-info">
             <tr>
+              <th>countryInfo.flag</th>
               <th>country</th>
               <th>cases</th>
               <th>todayCases</th>
