日本語対応/感染者比率を追加

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
               <th>countryInfo.flag</th>
               <th>country</th>
               <th>cases</th>
-              <th>todayCases</th>
               <th>deaths</th>
-              <th>todayDeaths</th>
               <th>recovered</th>
               <th>active</th>
               <th>critical</th>
+              <th>deathRate</th>
+              <th>recoveredRate</th>
             </tr>
           </thead>
         </table>
