--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <table id="corona" class="table table-hover dataTable" style="width:100%">
           <thead class="table-info">
             <tr>
-              <th>countryInfo.flag</th>
+              <th class="flag"></th>
               <th>country</th>
               <th>cases</th>
               <th>deaths</th>
