--- a/Tokyo.html
+++ b/Tokyo.html
@@ -19,21 +19,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <table id="corona" class="table table-hover dataTable" style="width:100%">
-          <thead class="table-info">
-            <tr>
-              <th class="flag"></th>
-              <th>country</th>
-              <th>cases</th>
-              <th>deaths</th>
-              <th>recovered</th>
-              <th>active</th>
-              <th>critical</th>
-              <th>deathRate</th>
-              <th>recoveredRate</th>
-            </tr>
-          </thead>
-        </table>
+        <div id="result"></div>
       </div>
     </div>
   </div>
@@ -42,7 +28,8 @@
   <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
   <script src="https://cdn.datatables.net/fixedheader/3.1.5/js/dataTables.fixedHeader.min.js"></script>
   <script src="./js/DataTableService.js"></script>
-  <script src="./js/index.js"></script>
+  <script src="./js/csvToObject.js"></script>
+  <script src="./js/tokyo.js"></script>
 </body>
 
 </html>
