新規感染者の項目を追加

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <tr>
               <th class="flag"></th>
               <th>country</th>
+              <th>todayCases</th>
               <th>cases</th>
               <th>deaths</th>
               <th>recovered</th>
